--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,13 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-
-spring.datasource.driverClassName=org.postgresql.Driver
+## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
+#drop n create table again, good for testing, comment this in production
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=false
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
