--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <java.version>1.8</java.version>
         <spring-security-oauth2.version>2.3.5.RELEASE</spring-security-oauth2.version>
         <spring-security-jwt.version>1.0.9.RELEASE</spring-security-jwt.version>
+        <org.liquibase.version>3.6.3</org.liquibase.version>
     </properties>
     
     <dependencies>
@@ -67,6 +68,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${org.liquibase.version}</version>
         </dependency>
     </dependencies>
 
