--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         
         <!--DB-->
         <dependency>
@@ -76,7 +80,7 @@
             <artifactId>liquibase-core</artifactId>
             <version>${org.liquibase.version}</version>
         </dependency>
-    
+        
         <!--UTILS-->
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -93,6 +97,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${swagger.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+    
+    
     </dependencies>
 
     <build>
@@ -107,13 +117,13 @@
         </plugins>
         
         <!--<resources>-->
-            <!--<resource>-->
-                <!--<directory>src/main/resources</directory>-->
-                <!--<filtering>true</filtering>-->
-                <!--<excludes>-->
-                    <!--<exclude>*.jks</exclude>-->
-                <!--</excludes>-->
-            <!--</resource>-->
+        <!--<resource>-->
+        <!--<directory>src/main/resources</directory>-->
+        <!--<filtering>true</filtering>-->
+        <!--<excludes>-->
+        <!--<exclude>*.jks</exclude>-->
+        <!--</excludes>-->
+        <!--</resource>-->
         <!--</resources>-->
     
     </build>
