--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,23 @@
             <artifactId>liquibase-core</artifactId>
             <version>${org.liquibase.version}</version>
         </dependency>
+
+        <!--graphql-->
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-spring-boot-starter</artifactId>
+            <version>5.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-tools</artifactId>
+            <version>5.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphiql-spring-boot-starter</artifactId>
+            <version>5.0.2</version>
+        </dependency>
         
         <!--UTILS-->
         <dependency>
